--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,37 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "dev": "nodemon --watch . --ext ts --exec ts-node index.ts",
+    "dev": "nodemon --watch . --ext ts --exec ts-node server.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "test": "echo \"No tests yet\""
+    "start": "node dist/server.js",
+    "test": "jest --runInBand",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-rate-limit": "^8.0.1",
+    "jsdom": "^26.1.0",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.12.7",
+    "@types/node-fetch": "^2.6.13",
+    "@types/supertest": "^6.0.3",
+    "eslint": "^9.34.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "jest": "^29.7.0",
+    "jiti": "^2.5.1",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0"
   }
 }
